# journal-mailer

./: .travis.yml  LICENSE  README.md  default.nix  journal-mailer.cabal  journal-mailer.config.example
src/: Main.hs  Options.hs  Process.hs  Run.hs
test/: OptionsSpec.hs  ProcessSpec.hs  RunSpec.hs
