name:                journal-mailer
version:             0.1.1.0
synopsis:            Sends out emails for every severe message logged to systemd's journal.
description:
  Sends out emails for every severe message logged to systemd's journal,
  i.e. messages of syslog priority LOG_ERR (3) or worse.
  .
  See also <http://www.freedesktop.org/software/systemd/man/systemd.journal-fields.html>
  and <http://tools.ietf.org/html/rfc5424>, page 10.
license:             BSD3
license-file:        LICENSE
author:              Sönke Hahn
copyright:           Zalora South East Asia Pte Ltd
maintainer:          soenke.hahn@zalora.com
category:            System
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/zalora/journal-mailer.git

executable journal-mailer
  main-is: Main.hs
  build-depends:
    base >= 4.7,
    base-compat,
    libsystemd-journal,
    pipes,
    pipes-safe,
    unordered-containers,
    bytestring,
    string-conversions,
    mime-mail,
    text,
    yaml
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options:
      -Wall -Werror -fno-warn-name-shadowing

test-suite spec
  type: exitcode-stdio-1.0
  ghc-options:
      -Wall -Werror -fno-warn-name-shadowing
  default-language: Haskell2010
  hs-source-dirs: src, test
  main-is: Spec.hs
  build-depends:
    base == 4.*,
    base-compat,
    libsystemd-journal,
    pipes,
    pipes-safe,
    unordered-containers,
    bytestring,
    string-conversions,
    mime-mail,
    text,
    yaml,

    hspec,
    QuickCheck,
    silently,
    temporary
